tests/semantic/pass/pointer_diff2.c
int main(void) {
  int* i;
  int* j;
  if (i - j) {
    return 0;
  }
  return i-j;
}
