tests/semantic/fail/unary_minus_bad_argument2.c
int main(void) {
  char *cptr;
  -cptr;
  return 0;
}
